hystrix-dashboard.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hystrix-dashboard-app
  labels:
    app: hystrix-dashboard-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : hystrix-dashboard-app
  template:
    metadata:
      labels:
        app: hystrix-dashboard-app
    spec:
      containers:
      - name: hystrix-dashboard-app
        image: userubuntu/hystrix-dashboard:1
        imagePullPolicy: Always
        ports:
          - containerPort: 5003

---

kind: Service
apiVersion: v1
metadata:
  name:  hystrix-dashboard-svc
spec:
  type: NodePort
  selector:
    app:  hystrix-dashboard-app
  ports:
  - port:  80
    targetPort:  5003
