user-service.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-app
  labels:
    app: user-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      containers:
      - name: user-service-app
        image: userubuntu/user-service:1
        imagePullPolicy: Always
        ports:
          - containerPort: 5001

---

kind: Service
apiVersion: v1
metadata:
  name:  user-service-svc
spec:
  selector:
    app:  user-service-app
  ports:
  - port:  80
    targetPort:  5001
